# cookly_backend

./: .gitignore
.github/workflows/: main.yml
cookly_backend/: .env-dist  Makefile  README.MD  docker-compose.yml  local-docker-compose.yml  nginx.conf
cookly_backend/app/conf.d/: local.conf  prod.conf
cookly_backend/auth_service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  init_auth_db.sql  pyproject.toml
cookly_backend/auth_service/config/: logging.yaml
cookly_backend/auth_service/docker/: serve-local.sh
cookly_backend/auth_service/src/: constants.py
cookly_backend/auth_service/tests/: conftest.py
cookly_backend/loki/: config.yaml
cookly_backend/nginx/: Dockerfile
cookly_backend/notification/: .env-dist  Dockerfile  Makefile  pyproject.toml
cookly_backend/notification/docker/: app.sh
cookly_backend/notification/src/: config.py  ioc.py
cookly_backend/notification/src/application/email_notification/: smtp_service.py
cookly_backend/notification/src/application/email_notification/email_confirmation/: handler.py
cookly_backend/notification/src/application/email_notification/reset_password/: handler.py
cookly_backend/notification/src/application/email_notification/third_party_register_notify/: handler.py
cookly_backend/notification/src/infra/: broker.py  converters.py
cookly_backend/notification/src/presentation/: email_router.py  main.py  schemas.py
cookly_backend/prometheus/: prometheus.yml
cookly_backend/recipe_backend/: Makefile  README.MD  alembic.ini  init_db.sql  pyproject.toml
cookly_backend/vector/: vector.toml
(+391 files in other folders)
